# gbif-fieldmap-builder

./: .gitignore  AGENTS.md  CHANGELOG_AI.md  FINE_SCALE_LIMITS_REPORT.md  HIERARCHICAL_VALIDATION_REPORT.md  README.md  RESEARCH_POSITIONING.md  RETROSPECTIVE_VALIDATION_PROTOCOL.md  SURVEY_PLANNING_POLICY.md  acsp_discover.py  benchmark_general_random_taxa_regions.py  gbif_fieldmap_builder_app.py  pyproject.toml  requirements.txt  test_acsp_cli.py  test_acsp_discover.py  test_acsp_package.py  test_automatic_hierarchy.py  test_benchmark_general.py  test_benchmarking.py  test_gbif_fetch_resilience.py  validate_automatic_discover.py
.github/workflows/: apply-autofill-fix.yml  apply-codex-fieldmap-fixes.yml  apply-exclusion-downloads-vif-fix.yml  codex-exclusion-extent-fix.yml  codex-hard-exclusion-v2.yml  codex-sdm-extent-preview-map.yml  package-checks.yml
acsp/: __init__.py  app.py  benchmarking.py  cli.py  planning.py  validation.py
benchmark_results/general_random_taxa_regions_20260702_v2/: benchmark_summary.json  pair_status.csv
benchmark_results/general_random_taxa_regions_20260703_unseen_confirmatory/: benchmark_summary.json  fold_recovery.csv  predeclared_taxon_region_pairs.csv  robust_inference.csv
benchmark_results/general_random_taxa_regions_20260705_hierarchical_confirmatory/: benchmark_summary.json  cohort_summary.csv  fold_recovery.csv  pair_status.csv  predeclared_taxon_region_pairs.csv  primary_endpoint_inference.csv  primary_endpoint_recovery.csv  robust_inference.csv
examples/: acsp-candidates.csv
legacy/: README.md  __init__.py
(+31 files in other folders)
