[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acsp-survey"
version = "0.1.0"
description = "Adaptive candidate prioritization helpers for field-survey planning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "folium>=0.14",
    "geopy>=2.4",
    "numpy>=1.23",
    "pandas>=1.5",
    "rasterio>=1.3",
    "requests>=2.31",
    "scikit-learn>=1.2",
    "shapely>=2.0",
    "streamlit>=1.30",
    "streamlit-folium>=0.18",
]

[project.scripts]
acsp-fieldmap = "acsp.app:main"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/zuizui0223/acsp"
Repository = "https://github.com/zuizui0223/acsp"
Issues = "https://github.com/zuizui0223/acsp/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5", "pytest>=8"]

[tool.setuptools]
py-modules = ["acsp_discover", "gbif_fieldmap_builder_app"]

[tool.setuptools.packages.find]
include = ["acsp*"]
